--- a/libs/external/codelab-codegen/typescript-server-fetch/package.json
+++ b/libs/external/codelab-codegen/typescript-server-fetch/package.json
@@ -21,13 +21,15 @@
   },
   "exports": {
     ".": {
-      "default": "./src/index.ts"
+      "development": "./src/index.ts",
+      "import": "./dist/src/index.js",
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
     }
   },
   "nx": {
     "name": "codelab-codegen-typescript-server-fetch",
     "projectType": "library",
-    "sourceRoot": "libs/external/codelab-codegen/typescript-server-fetch/src",
     "tags": [
       "projectName:codelab-codegen-typescript-server-fetch",
       "projectType:library",
