--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "@apollo/client": "3.12.3",
     "@apollo/server": "4.11.2",
     "@auth0/nextjs-auth0": "4.4.1",
-    "@codelab-codegen/codelab-preset": "file:libs/external/codelab-codegen/codelab-preset/dist",
-    "@codelab-codegen/typescript-fetch": "file:libs/external/codelab-codegen/typescript-fetch/dist",
-    "@codelab-codegen/typescript-server-fetch": "file:libs/external/codelab-codegen/typescript-server-fetch/dist",
+    "@codelab-codegen/codelab-preset": "workspace:*",
+    "@codelab-codegen/typescript-fetch": "workspace:*",
+    "@codelab-codegen/typescript-server-fetch": "workspace:*",
     "@codelab/tools-workspace": "workspace:*",
     "@codelab/eslint-plugin": "workspace:*",
     "@codelab/tsc-check": "file:libs/tools/tsc-check/dist",
