--- a/libs/shared/infra/gql-client/package.json
+++ b/libs/shared/infra/gql-client/package.json
@@ -6,6 +6,12 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
+    },
+    "./server": {
+      "development": "./src/server.ts",
+      "import": "./dist/server.js",
+      "types": "./dist/server.d.ts",
+      "default": "./dist/server.js"
     }
   },
   "devDependencies": {
