wip: fixing spec types

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -152,6 +152,12 @@
       "path": "../../libs/frontend/test/data"
     },
     {
+      "path": "../../libs/frontend/infra/context"
+    },
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
       "path": "./tsconfig.spec.json"
     }
   ]
