--- a/libs/tools/workspace/tsconfig.lib.json
+++ b/libs/tools/workspace/tsconfig.lib.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "types": ["node"],
     "resolveJsonModule": true,
-    "module": "CommonJS",
+    "module": "commonjs",
     "moduleResolution": "node",
     "customConditions": null
   },
