--- a/apps/design-system/.eslintrc.json
+++ b/apps/design-system/.eslintrc.json
@@ -5,10 +5,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": [
-          "apps/design-system/tsconfig.*?.json",
-          "apps/design-system/tsconfig.storybook.json"
-        ]
+        "project": ["apps/design-system/tsconfig.*?.json"]
       },
       "rules": {}
     },
