--- a/apps/web/tsconfig.lib.json
+++ b/apps/web/tsconfig.lib.json
@@ -1,6 +1,37 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["**/*.ts", "**/*.tsx"],
+  "compilerOptions": {
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "incremental": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "types": [
+      "node",
+      "worker-loader",
+      "cypher",
+      "styled-components",
+      "uniforms"
+    ],
+    "noEmit": false,
+    "module": "esnext",
+    "allowJs": true
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "references": [
     {
       "path": "../../libs/shared/infra/auth0/tsconfig.lib.json"
