--- a/libs/frontend/presentation/codelab-ui/tsconfig.lib.json
+++ b/libs/frontend/presentation/codelab-ui/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../../tsconfig.build.base.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
     "outDir": "./dist",
     "rootDir": "./src",
     "importHelpers": true,
