--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
     "dots-wrapper": "3.11.8",
     "embla-carousel-react": "8.1.6",
     "env-var": "7.4.1",
-    "eslint-plugin-barrel-files": "1.0.5",
+    "eslint-plugin-barrel-files": "3.0.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
     "framer-motion": "6.3.3",
@@ -295,7 +295,7 @@
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
     "@graphql-codegen/typescript-operations": "4.4.1",
     "@graphql-codegen/visitor-plugin-common": "5.6.1",
-    "@graphql-eslint/eslint-plugin": "3.20.1",
+    "@graphql-eslint/eslint-plugin": "4.4.0",
     "@graphql-hive/cli": "0.34.0",
     "@jest/globals": "29.7.0",
     "@ls-lint/ls-lint": "2.0.0",
@@ -303,7 +303,7 @@
     "@nestjs/devtools-integration": "0.2.0",
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
-    "@next/eslint-plugin-next": "15.1.6",
+    "@next/eslint-plugin-next": "15.3.1",
     "@nx/devkit": "20.8.1",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "20.8.1",
@@ -334,7 +334,7 @@
     "@storybook/react-vite": "8.6.12",
     "@storybook/test-runner": "0.22.0",
     "@storybook/testing-library": "0.2.2",
-    "@stylistic/eslint-plugin-ts": "1.6.3",
+    "@stylistic/eslint-plugin-ts": "4.2.0",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.11",
@@ -352,7 +352,7 @@
     "@types/concurrently": "6.4.0",
     "@types/cookie": "0.5.1",
     "@types/diff": "5.0.3",
-    "@types/eslint": "8.56.10",
+    "@types/eslint": "9.6.1",
     "@types/express": "4.17.21",
     "@types/flat": "5.0.2",
     "@types/fs-extra": "11.0.4",
@@ -384,9 +384,9 @@
     "@types/webpack": "5.28.0",
     "@types/ws": "8.5.10",
     "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
-    "@typescript-eslint/utils": "7.17.0",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "@typescript-eslint/utils": "8.31.1",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/ui": "^3.1.1",
@@ -406,28 +406,28 @@
     "del-cli": "5.1.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "15.3.0",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-import-resolver-node": "0.3.9",
-    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-import-resolver-typescript": "4.3.4",
     "eslint-plugin-ban": "2.0.0",
-    "eslint-plugin-canonical": "4.15.1",
+    "eslint-plugin-canonical": "5.1.3",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "27.6.0",
+    "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-jest-formatting": "3.1.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-perfectionist": "3.7.0",
-    "eslint-plugin-playwright": "1.6.2",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-perfectionist": "4.12.3",
+    "eslint-plugin-playwright": "2.2.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "eslint-plugin-readable-tailwind": "1.8.0",
-    "eslint-plugin-sort-destructure-keys": "1.5.0",
-    "eslint-plugin-tailwindcss": "3.17.4",
-    "eslint-plugin-unicorn": "55.0.0",
-    "eslint-plugin-unused-imports": "3.2.0",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-readable-tailwind": "2.1.1",
+    "eslint-plugin-sort-destructure-keys": "2.0.0",
+    "eslint-plugin-tailwindcss": "3.18.0",
+    "eslint-plugin-unicorn": "59.0.0",
+    "eslint-plugin-unused-imports": "4.1.4",
     "execa": "5.1.1",
     "git-changed-files": "1.0.0",
     "husky": "9.1.7",
@@ -458,6 +458,7 @@
     "ts-node": "10.9.1",
     "type-fest": "4.12.0",
     "typescript": "5.5.4",
+    "typescript-eslint": "^8.31.1",
     "utility-types": "3.10.0",
     "vite": "6.2.1",
     "vite-plugin-dts": "^4.5.3",
