--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,7 @@
     "ecmaVersion": "latest"
   },
   "env": {
-    "browser": true,
-    "jest/globals": true
+    "browser": true
   },
   "globals": {
     "JQuery": "readonly",
@@ -28,12 +27,12 @@
     // "plugin:canonical/recommended",
     // "plugin:@typescript-eslint/strict",
     // "eslint:recommended",
-    "./scripts/eslint/.prettier.eslintrc.json",
-    "./scripts/eslint/.nx.eslintrc.json",
+    // "./scripts/eslint/.prettier.eslintrc.json",
+    // "./scripts/eslint/.nx.eslintrc.json",
     // "./scripts/eslint/.import.eslintrc.js",
     // "./scripts/eslint/.import.eslintrc.json",
-    "./scripts/eslint/.jest.eslintrc.json",
-    "./scripts/eslint/.globals.eslintrc.json"
+    // "./scripts/eslint/.jest.eslintrc.json",
+    // "./scripts/eslint/.globals.eslintrc.json"
     // "./scripts/eslint/.format.eslintrc.json",
     // "./scripts/eslint/.naming.eslintrc.json",
     // "./scripts/eslint/.codelab.eslintrc.json",
