--- a/package.json
+++ b/package.json
@@ -413,6 +413,7 @@
     "eslint-import-resolver-typescript": "4.3.4",
     "eslint-plugin-ban": "2.0.0",
     "eslint-plugin-canonical": "5.1.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-import-x": "4.11.0",
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-jest-formatting": "3.1.0",
