refactor: add use client to css editor components

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ vite.config.*.timestamp*
 .aider*
 
 vitest.config.*.timestamp*.perplexity-key
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
