--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,4 +34,5 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "typescript.experimental.expandableHover": true,
+  "nxConsole.generateAiAgentRules": true,
 }
