--- a/data/export-v3/admin/atoms/AntDesignConfigProvider.json
+++ b/data/export-v3/admin/atoms/AntDesignConfigProvider.json
@@ -11,33 +11,13 @@
         "fieldType": {
           "id": "44c7df30-5f72-45ca-a3d1-d08f21ad34ba"
         },
-        "id": "5b6f7eef-dff5-4721-ac64-92f3ef39e495",
-        "key": "autoInsertSpaceInButton",
-        "name": "Auto Insert Space In Button",
-        "nextSibling": {
-          "id": "4ee46454-2ff1-40e3-a41d-b62044581f4d"
-        },
-        "prevSibling": null,
-        "validationRules": null
-      },
-      {
-        "api": {
-          "id": "d9dadd2e-d3be-4742-944c-2b15fcea3389"
-        },
-        "defaultValues": null,
-        "description": null,
-        "fieldType": {
-          "id": "44c7df30-5f72-45ca-a3d1-d08f21ad34ba"
-        },
         "id": "4ee46454-2ff1-40e3-a41d-b62044581f4d",
         "key": "componentDisabled",
         "name": "Component Disabled",
         "nextSibling": {
           "id": "c892b1b4-6b4a-49be-9215-cf4c905f57d8"
         },
-        "prevSibling": {
-          "id": "5b6f7eef-dff5-4721-ac64-92f3ef39e495"
-        },
+        "prevSibling": null,
         "validationRules": null
       },
       {
@@ -107,36 +87,16 @@
         "defaultValues": null,
         "description": null,
         "fieldType": {
-          "id": "31740207-6a13-45a7-a01d-a1568fe47cab"
+          "id": "44c7df30-5f72-45ca-a3d1-d08f21ad34ba"
         },
         "id": "9ef85c93-7f3d-4395-93fd-ac776e835eab",
-        "key": "dropdownMatchSelectWidth",
-        "name": "Dropdown Match Select Width",
-        "nextSibling": {
-          "id": "0b4ec360-96a0-4d81-919b-5b868e5202e4"
-        },
-        "prevSibling": {
-          "id": "df0d31b4-7f6e-411f-892b-9310786ec47a"
-        },
-        "validationRules": null
-      },
-      {
-        "api": {
-          "id": "d9dadd2e-d3be-4742-944c-2b15fcea3389"
-        },
-        "defaultValues": null,
-        "description": null,
-        "fieldType": {
-          "id": "3bc1a470-3cc4-45e4-bc86-bc11f21b967e"
-        },
-        "id": "0b4ec360-96a0-4d81-919b-5b868e5202e4",
-        "key": "form",
-        "name": "Form",
+        "key": "popupMatchSelectWidth",
+        "name": "Popup Match Select Width",
         "nextSibling": {
           "id": "1cec6eab-f6a0-441f-b36c-48c28f7b9762"
         },
         "prevSibling": {
-          "id": "9ef85c93-7f3d-4395-93fd-ac776e835eab"
+          "id": "df0d31b4-7f6e-411f-892b-9310786ec47a"
         },
         "validationRules": null
       },
@@ -156,7 +116,7 @@
           "id": "051da31f-8f00-4dbb-ab90-81deb184bcf0"
         },
         "prevSibling": {
-          "id": "0b4ec360-96a0-4d81-919b-5b868e5202e4"
+          "id": "9ef85c93-7f3d-4395-93fd-ac776e835eab"
         },
         "validationRules": null
       },
@@ -193,50 +153,10 @@
         "key": "iconPrefixCls",
         "name": "Icon Prefix Cls",
         "nextSibling": {
-          "id": "c71d3938-2fb8-4f35-ad28-f536eae04e89"
-        },
-        "prevSibling": {
-          "id": "051da31f-8f00-4dbb-ab90-81deb184bcf0"
-        },
-        "validationRules": null
-      },
-      {
-        "api": {
-          "id": "d9dadd2e-d3be-4742-944c-2b15fcea3389"
-        },
-        "defaultValues": null,
-        "description": null,
-        "fieldType": {
-          "id": "1f11c9dd-7e48-4beb-8d59-f54b8d11e0ac"
-        },
-        "id": "c71d3938-2fb8-4f35-ad28-f536eae04e89",
-        "key": "input",
-        "name": "Input",
-        "nextSibling": {
-          "id": "5f97a0b1-ad67-4523-9ea9-a61dd91d0c1b"
-        },
-        "prevSibling": {
-          "id": "8ca0c04a-4e7e-4250-9320-ce0ec7820d01"
-        },
-        "validationRules": null
-      },
-      {
-        "api": {
-          "id": "d9dadd2e-d3be-4742-944c-2b15fcea3389"
-        },
-        "defaultValues": null,
-        "description": null,
-        "fieldType": {
-          "id": "816374c1-3cdd-45ef-bb13-c2e84e88df51"
-        },
-        "id": "5f97a0b1-ad67-4523-9ea9-a61dd91d0c1b",
-        "key": "pageHeader",
-        "name": "Page Header",
-        "nextSibling": {
           "id": "10d73057-cd8d-47a2-8095-5528c60ccc0e"
         },
         "prevSibling": {
-          "id": "c71d3938-2fb8-4f35-ad28-f536eae04e89"
+          "id": "051da31f-8f00-4dbb-ab90-81deb184bcf0"
         },
         "validationRules": null
       },
@@ -256,7 +176,7 @@
           "id": "37381a73-4bf9-42f8-b1bc-af56ce6781d5"
         },
         "prevSibling": {
-          "id": "5f97a0b1-ad67-4523-9ea9-a61dd91d0c1b"
+          "id": "8ca0c04a-4e7e-4250-9320-ce0ec7820d01"
         },
         "validationRules": null
       },
@@ -273,30 +193,10 @@
         "key": "renderEmpty",
         "name": "Render Empty",
         "nextSibling": {
-          "id": "d3155ee0-2400-4ba4-9b99-8c28da9feff5"
-        },
-        "prevSibling": {
-          "id": "10d73057-cd8d-47a2-8095-5528c60ccc0e"
-        },
-        "validationRules": null
-      },
-      {
-        "api": {
-          "id": "d9dadd2e-d3be-4742-944c-2b15fcea3389"
-        },
-        "defaultValues": null,
-        "description": null,
-        "fieldType": {
-          "id": "4b9cb637-d6dc-4a58-ab84-24cfe3c3d106"
-        },
-        "id": "d3155ee0-2400-4ba4-9b99-8c28da9feff5",
-        "key": "space",
-        "name": "Space",
-        "nextSibling": {
           "id": "7e09ba1f-5e68-45f8-88ad-132ea44ff2dd"
         },
         "prevSibling": {
-          "id": "37381a73-4bf9-42f8-b1bc-af56ce6781d5"
+          "id": "10d73057-cd8d-47a2-8095-5528c60ccc0e"
         },
         "validationRules": null
       },
@@ -314,7 +214,7 @@
         "name": "Virtual",
         "nextSibling": null,
         "prevSibling": {
-          "id": "d3155ee0-2400-4ba4-9b99-8c28da9feff5"
+          "id": "37381a73-4bf9-42f8-b1bc-af56ce6781d5"
         },
         "validationRules": null
       }
@@ -372,57 +272,11 @@
         "name": "AntDesignConfigProvider Direction Enum"
       },
       {
-        "__typename": "EnumType",
-        "allowedValues": [
-          {
-            "id": "42dcb0ce-65c1-4468-a564-8b40a0bd44c9",
-            "key": "boolean",
-            "value": "boolean"
-          },
-          {
-            "id": "7d7be962-07ea-4328-bfde-bbd9a66cb8c4",
-            "key": "number",
-            "value": "number"
-          }
-        ],
-        "id": "31740207-6a13-45a7-a01d-a1568fe47cab",
-        "kind": "EnumType",
-        "name": "AntDesignConfigProvider Dropdown Match Select Width Enum"
-      },
-      {
         "__typename": "InterfaceType",
         "fields": [],
         "id": "aca546b6-3200-47c7-a142-61bf75ea48ba",
         "kind": "InterfaceType",
         "name": "AntDesignConfigProvider Csp API"
-      },
-      {
-        "__typename": "InterfaceType",
-        "fields": [],
-        "id": "3bc1a470-3cc4-45e4-bc86-bc11f21b967e",
-        "kind": "InterfaceType",
-        "name": "AntDesignConfigProvider Form API"
-      },
-      {
-        "__typename": "InterfaceType",
-        "fields": [],
-        "id": "1f11c9dd-7e48-4beb-8d59-f54b8d11e0ac",
-        "kind": "InterfaceType",
-        "name": "AntDesignConfigProvider Input API"
-      },
-      {
-        "__typename": "InterfaceType",
-        "fields": [],
-        "id": "816374c1-3cdd-45ef-bb13-c2e84e88df51",
-        "kind": "InterfaceType",
-        "name": "AntDesignConfigProvider PageHeader API"
-      },
-      {
-        "__typename": "InterfaceType",
-        "fields": [],
-        "id": "4b9cb637-d6dc-4a58-ab84-24cfe3c3d106",
-        "kind": "InterfaceType",
-        "name": "AntDesignConfigProvider Space API"
       }
     ]
   },
