--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "@neo4j/graphql": "6.3.1",
     "@nestjs/apollo": "13.0.2",
     "@nestjs/bullmq": "11.0.2",
-    "@nestjs/cache-manager": "^3.0.0",
+    "@nestjs/cache-manager": "3.0.0",
     "@nestjs/common": "11.0.7",
     "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.7",
