refactor(libs-backend-infra-adapter-dataloader): move interface to abstract types module
- Move IDataLoaders and IDataLoaderContext from adapter to abstract/types
- Update imports across all affected modules
- Simplify dataloader module exports
- Clean up service tracking plugin imports
- Fix lint-staged config to explicitly set ESLINT_USE_FLAT_CONFIG=false
- Fix member ordering in CypherTrackingTransaction class

--- a/libs/backend/infra/adapter/dataloader/project.json
+++ b/libs/backend/infra/adapter/dataloader/project.json
@@ -1,10 +1,13 @@
 {
-  "name": "dataloader",
+  "name": "backend-infra-adapter-dataloader",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/backend/infra/adapter/dataloader/src",
   "projectType": "library",
   "tags": ["scope:backend"],
   "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
