fix(libs): update project configurations
- Add proper tags to backend-infra-adapter-dataloader project
- Fix project name in shared-infra-tracing from "tracing" to "shared-infra-tracing"

--- a/libs/backend/infra/adapter/dataloader/project.json
+++ b/libs/backend/infra/adapter/dataloader/project.json
@@ -3,7 +3,13 @@
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/backend/infra/adapter/dataloader/src",
   "projectType": "library",
-  "tags": ["scope:backend"],
+  "tags": [
+    "projectName:backend-infra-adapter-dataloader",
+    "projectType:library",
+    "type:concrete",
+    "layer:infra",
+    "scope:backend"
+  ],
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
