refactor: reorganize GitHub and OpenMemory sync infrastructure (#3744)

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,3 +3,8 @@
 # Generate at: https://github.com/settings/tokens
 # Required scopes: repo (for private repos) or public_repo (for public repos only)
 GITHUB_TOKEN=ghp_your_github_token_here
+
+# Mem0 API Key
+# Used for syncing GitHub issues to Mem0
+# Get your API key from: https://app.mem0.ai/
+MEM0_API_KEY=your_mem0_api_key_here
