--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@nestjs/swagger": "11.0.3",
     "@nestjs/websockets": "^11.0.11",
     "@next/bundle-analyzer": "15.2.4",
+    "@octokit/graphql": "^9.0.1",
     "@octokit/rest": "^22.0.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "1.2.0",
