feat: enhance tsc-check plugin to support both tsconfig.json and tsconfig.spec.json (#3741)

--- a/libs/tools/tsc-check/project.json
+++ b/libs/tools/tsc-check/project.json
@@ -33,6 +33,11 @@
             "input": "./libs/tools/tsc-check",
             "glob": "executors.json",
             "output": "."
+          },
+          {
+            "input": "./libs/tools/tsc-check",
+            "glob": "tsconfig.json",
+            "output": "."
           }
         ]
       }
