--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -673,7 +673,7 @@ jobs:
     steps:
       - restore-workspace
       - run:
-          command: pnpm nx run-many --target=tsc-check
+          command: pnpm nx run-many --target=tsc-check --target=tsc-check:spec
           name: Run tsc Check
   unit:
     executor: docker-node
