feat: optimize GraphQL queries in import/export operations (#3740)
* feat: add export functionality for atoms, components, and APIs (#3735)

* feat: improve logging behavior and fix export APIs type handling (#3735)

* refactor: optimize batch operations and suppress Neo4j GraphQL warnings (#3735)

* feat: add custom nx wrapper script with default output style

- Add wrapper script that automatically includes --outputStyle=stream flag
- Include documentation for usage and setup instructions
- Helps streamline nx command execution with consistent output formatting

* refactor: clean up imports and improve logging implementation (#3735)

* feat: add BatchHttpLink and optimize parallel processing (#3735)

* fix: optimize parallel operations and document Neo4j constraints

- Convert tag creation to Promise.all since no relationships are created
- Add detailed comments explaining why types and fields must be sequential
- Document Neo4j deadlock issues with parallel relationship updates
- Reduce test timeout from 400s to 300s

* refactor: reorganize CLAUDE.md and fix Neo4j deadlock in tag imports

- Extract domain knowledge to separate documentation file
- Add OpenMemory integration and GitHub issue context instructions
- Fix potential Neo4j deadlock by switching from parallel to sequential tag creation
- Clean up CLAUDE.md to focus on development commands and guidelines

* feat: enhance GitHub issues table with search, sorting, and sync functionality (#3744)

* chore: add tracked dist files for tools and codegen packages

* docs: consolidate OpenMemory sync documentation (#3744)

* chore: add cspell configuration for custom words

- Added cspell.json to handle spelling warnings
- Included project-specific words: openmemory, webberwang, parseable

* refactor: reorganize GitHub and OpenMemory sync infrastructure (#3744)

* fix: handle undefined session.user.email in GitHub discussions route (#3744)

* chore: run codegen

* feat: enhance tsc-check plugin to support both tsc

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test.integration": "nx run-many --all --target=test -c test.integration --parallel=1",
     "lint": "nx run-many --all --target=lint --parallel=5",
     "format": "npx prettier --write \"./**/*.{graphql,yaml,json,css}\" && terraform -chdir=infra/terraform fmt --recursive",
-    "nx": "nx",
+    "nx": "scripts/nx/nx.sh",
+    "claude": "scripts/claude/claude.sh",
     "update": "nx migrate @nx/workspace",
     "dep-graph": "nx dep-graph --watch",
     "help": "nx help",
@@ -112,6 +113,8 @@
     "@nestjs/swagger": "11.0.3",
     "@nestjs/websockets": "^11.0.11",
     "@next/bundle-analyzer": "15.2.4",
+    "@octokit/graphql": "^9.0.1",
+    "@octokit/rest": "^22.0.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
@@ -205,6 +208,7 @@
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.0.1",
     "lexical": "0.17.1",
+    "mem0ai": "^2.1.33",
     "mobx": "6.13.7",
     "mobx-keystone": "1.11.4",
     "mobx-react-lite": "4.1.0",
