feat: organize conventions and add start-task command
- Create .claude/documentation/convention/ directory for all convention docs
- Move existing convention files to new directory structure
- Extract inline conventions from CLAUDE.md to separate files:
  - code-style-conventions.md
  - project-structure-conventions.md
  - state-management-conventions.md
  - styling-conventions.md
  - graphql-conventions.md
  - git-commit-conventions.md
  - documentation-conventions.md
  - type-checking-conventions.md
- Update CLAUDE.md to use @import for all conventions
- Add custom slash command /project:start-task for creating git worktrees
- Configure start-task to copy .env files to new worktrees
- Add close-task.md command template
- Add .mcp.json.example for MCP configuration
- Update cspell and .env.example configurations

CLOSES: #3741

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,13 @@ AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
 # It's used for authentication when uploading source maps.
 SENTRY_AUTH_TOKEN=
 SENTRY_DSN=your-sentry-dsn-here
+
+#
+# Openmemory
+#
+OPENMEMORY_API_KEY=
+
+#
+# Perplexity
+#
+PERPLEXITY_API_KEY=
