chore: update Dockerfiles to include .eslintrc.json in copy commands (#3683)
* chore: update Dockerfiles to include .eslintrc.json in copy commands

* chore: add .eslintrc.json to .dockerignore

* chore: update Dockerfiles to include eslint scripts in copy commands

--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,7 @@
 !/.npmrc
 !/nx.json
 !/.nxignore
+!/.eslintrc.json
 !/package.json
 !/pnpm-lock.yaml
 !/tsconfig.base.json
@@ -30,3 +31,4 @@
 !/libs/
 !/data/
 !/scripts/tailwind/
+!/scripts/eslint/
