--- a/.circleci/config/commands/install-packages.yml
+++ b/.circleci/config/commands/install-packages.yml
@@ -27,7 +27,7 @@ steps:
       # Include tools-workspace package.json in cache key because pnpm uses symlinks for file: protocol dependencies.
       # When dist files change but pnpm-lock.yaml doesn't, the cached node_modules would have stale symlinks
       # pointing to old dist content. This ensures fresh symlinks when tools-workspace is updated.
-      key: node-modules-cache-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/libs/tools/workspace/package.json" }}
+      key: node-modules-cache-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "dist/**/package.json" }}
       paths:
         - ~/project/node_modules
   # node_modules cache needs to be checked for cache reset before we can save, otherwise nx cache grows too much. This step happens after build
