--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -4,6 +4,9 @@ steps:
   # Attach `dist` folder
   - attach_workspace:
       at: ~/
+  - run:
+      name: 'Generate dist libs checksum for cache key'
+      command: ~/project/scripts/circleci/generate-dist-checksum.sh
   - restore_cache:
       name: 'Restore node_modules Cache'
       keys:
