--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -10,7 +10,7 @@ steps:
   - restore_cache:
       name: 'Restore node_modules Cache'
       keys:
-        - node-modules-cache-{{ checksum "pnpm-lock.yaml" }}-{{ checksum ".circleci/dist-libs-checksum.txt" }}
+        - node-modules-cache-{{ checksum "pnpm-lock.yaml" }}-{{ checksum "/tmp/dist-libs-checksum.txt" }}
         - node-modules-cache-{{ checksum "pnpm-lock.yaml" }}
         - node-modules-cache-
   - restore_cache:
