feat: implement git tag-based Docker versioning
Replace Terraform Cloud-based version management with direct git tag usage. Docker images are now
tagged based on semantic version tags (e.g., 1.2.3) found on commits, or 'latest' if no tag exists.

Key changes:
- Remove increment-docker-version scripts and Terraform Cloud variable updates
- Add Docker tag detection logic to env.sh for centralized version management
- Create validate-git-tag.sh script for semantic version validation
- Update all Docker build jobs to use setup-env for consistent versioning
- Add TF_VAR_DOCKER_TAG_VERSION export for Terraform compatibility
- Simplify setup-infra-workspace job by removing redundant version logic
- Add comprehensive documentation in .claude/documentation/git-tag-version-control.md

This simplifies the deployment process by using git tags as the single source of truth for
versioning, eliminating the need for external version tracking in Terraform Cloud.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,10 +79,6 @@ commands:
       - run:
           command: |
             pnpm jest --clearCache
-  increment-docker-version:
-    description: Increment Docker Version
-    steps:
-      - run: ~/project/.circleci/config/commands/increment-docker-version.sh
   install-cypher-shell:
     steps:
       - run:
@@ -602,9 +598,8 @@ jobs:
     steps:
       - checkout
       - install-terraform
-      - increment-docker-version
+      - setup-env
       - login-docker
-      - increment-docker-version
       - persist_to_workspace:
           paths:
             - .docker/config.json
