--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -3,10 +3,9 @@ resource_class: large
 steps:
   - checkout
   - install-terraform
-  - increment-docker-version
-  # - install-packer
+  - setup-env
   - login-docker
-  - increment-docker-version
+
   - persist_to_workspace:
       root: ~/
       # Persists the docker login
