--- a/.circleci/config/workflows/infra-pr.yml
+++ b/.circleci/config/workflows/infra-pr.yml
@@ -1,4 +1,4 @@
-# This runs on staging only for testing
+# This runs on staging branch and version tags
 jobs:
   # - setup-workspace:
   #     resource_class: large
@@ -12,12 +12,16 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
   - tf-plan:
       name: 'tf-plan-ci'
       filters:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: ci
       requires:
         - setup-infra-workspace
@@ -27,6 +31,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: ci
       requires:
         - tf-plan-ci
@@ -44,6 +50,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
@@ -53,6 +61,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
@@ -62,6 +72,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
@@ -71,6 +83,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
@@ -80,6 +94,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: prod
       requires:
         - docker-web
@@ -91,6 +107,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       type: approval
       requires:
         - tf-plan
@@ -99,6 +117,8 @@ jobs:
         branches:
           only:
             - staging
+        tags:
+          only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: prod
       requires:
         - hold-apply
