--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -920,15 +920,11 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       - tf-plan:
           filters:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           name: tf-plan-ci
           requires:
             - setup-infra-workspace
@@ -938,8 +934,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           name: tf-apply-ci
           requires:
             - tf-plan-ci
@@ -951,8 +945,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - tf-apply-ci
       - docker-api:
@@ -962,8 +954,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - tf-apply-ci
       - docker-sites:
@@ -973,8 +963,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - tf-apply-ci
       - docker-landing:
@@ -984,8 +972,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - setup-infra-workspace
       - tf-plan:
@@ -993,8 +979,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - docker-web
             - docker-api
@@ -1006,8 +990,6 @@ workflows:
             branches:
               only:
                 - staging
-            tags:
-              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
             - tf-plan
           type: approval
@@ -1016,6 +998,82 @@ workflows:
             branches:
               only:
                 - staging
+          requires:
+            - hold-apply
+          stage: prod
+  infra-pr-tag:
+    jobs:
+      - setup-infra-workspace:
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+      - tf-plan:
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          name: tf-plan-ci
+          requires:
+            - setup-infra-workspace
+          stage: ci
+      - tf-apply:
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          name: tf-apply-ci
+          requires:
+            - tf-plan-ci
+          stage: ci
+      - docker-web:
+          context:
+            - prod
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - tf-apply-ci
+      - docker-api:
+          context:
+            - prod
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - tf-apply-ci
+      - docker-sites:
+          context:
+            - prod
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - tf-apply-ci
+      - docker-landing:
+          context:
+            - prod
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - setup-infra-workspace
+      - tf-plan:
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - docker-web
+            - docker-api
+            - docker-sites
+            - docker-landing
+          stage: prod
+      - hold-apply:
+          filters:
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires:
+            - tf-plan
+          type: approval
+      - tf-apply:
+          filters:
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
           requires:
