--- a/.circleci/config/workflows/infra-pr-tag.yml
+++ b/.circleci/config/workflows/infra-pr-tag.yml
@@ -2,11 +2,15 @@
 jobs:
   - setup-infra-workspace:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
   - tf-plan:
       name: 'tf-plan-ci'
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: ci
@@ -15,6 +19,8 @@ jobs:
   - tf-apply:
       name: 'tf-apply-ci'
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: ci
@@ -22,30 +28,38 @@ jobs:
         - tf-plan-ci
   - docker-web:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
-        - tf-apply-ci
+        - setup-infra-workspace
   - docker-api:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
-        - tf-apply-ci
+        - setup-infra-workspace
   - docker-sites:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
       requires:
-        - tf-apply-ci
+        - setup-infra-workspace
   - docker-landing:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
@@ -54,6 +68,8 @@ jobs:
         - setup-infra-workspace
   - tf-plan:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: prod
@@ -64,6 +80,8 @@ jobs:
         - docker-landing
   - hold-apply:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       type: approval
@@ -71,6 +89,8 @@ jobs:
         - tf-plan
   - tf-apply:
       filters:
+        branches:
+          ignore: /.*/
         tags:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       stage: prod
